--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,36 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Головна - Med Salary App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f5f5f5;
-        }
-        .navbar {
-            background-color: #2a9d8f;
-        }
-        .navbar-brand, .navbar-nav .nav-link {
-            color: white;
-        }
-        .jumbotron {
-            background-color: #2a9d8f;
-            color: white;
-            padding: 50px;
-            margin-top: 50px;
-            text-align: center;
-            border-radius: 8px;
-        }
-        .btn-primary {
-            background-color: #2a9d8f;
-            border-color: #2a9d8f;
-        }
-        .btn-primary:hover {
-            background-color: #21867a;
-            border-color: #21867a;
-        }
-        .container {
-            margin-top: 40px;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/stafflist.css}" />
 </head>
 <body>
 
