--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,32 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вхід - Med Salary App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f5f5f5;
-        }
-        .navbar {
-            background-color: #2a9d8f;
-        }
-        .navbar-brand, .navbar-nav .nav-link {
-            color: white;
-        }
-        .card {
-            border-color: #2a9d8f;
-        }
-        .card-header {
-            background-color: #2a9d8f;
-            color: white;
-        }
-        .btn-primary {
-            background-color: #2a9d8f;
-            border-color: #2a9d8f;
-        }
-        .btn-primary:hover {
-            background-color: #21867a;
-            border-color: #21867a;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/stafflist.css}" />
 </head>
 <body>
 
