--- a/src/main/resources/templates/s_users.html
+++ b/src/main/resources/templates/s_users.html
@@ -5,33 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список Користувачів</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f5f5f5;
-        }
-        .navbar {
-            background-color: #2a9d8f;
-        }
-        .navbar-brand, .navbar-nav .nav-link {
-            color: white;
-        }
-        .table {
-            margin-top: 40px;
-            border: 1px solid #2a9d8f;
-        }
-        .table thead {
-            background-color: #2a9d8f;
-            color: white;
-        }
-        .btn-primary {
-            background-color: #2a9d8f;
-            border-color: #2a9d8f;
-        }
-        .btn-primary:hover {
-            background-color: #21867a;
-            border-color: #21867a;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/stafflist.css}" />
 </head>
 <body>
 
