--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,27 +9,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-    <div class="container">
-        <a class="navbar-brand" href="#">Med Salary App</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Головна</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Вхід</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">Реєстрація</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <div class="container mt-5">
     <div class="row justify-content-center">
