--- a/src/main/resources/templates/s_users.html
+++ b/src/main/resources/templates/s_users.html
@@ -9,27 +9,8 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-    <div class="container">
-        <a class="navbar-brand" href="#">Med Salary App</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Головна</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Вхід</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">Реєстрація</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Список Користувачів</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/navbar :: navbar"></div>
+
 
 <div class="container">
     <h2 class="mt-5">Список Користувачів</h2>
