Navbar added th:fragment='navbar'

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" th:fragment="navbar">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Відділи</a>
         <div class="collapse navbar-collapse">
