--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,8 +22,8 @@
                     </div>
                     <form th:action="@{/login}" method="post">
                         <div class="mb-3">
-                            <label for="login" class="form-label">Логін</label>
-                            <input type="text" class="form-control" id="login" name="login" required>
+                            <label for="username" class="form-label">Логін</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Пароль</label>
