--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,19 +7,19 @@
                     <a class="nav-link" th:href="@{/}">Головна</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/users}">Користувачі</a>
+                    <a class="nav-link" th:href="@{/user-position}">Посади -></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user-position}">Посади</a>
+                    <a class="nav-link" th:href="@{/department}">Відділи -></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/department}">Відділи</a>
+                    <a class="nav-link" th:href="@{/stafflist}">Штатний розпис -></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/stafflist}">Штатний розпис</a>
+                    <a class="nav-link" th:href="@{/user}">Користувачі -></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/nszu-decryption}">Розшифровка</a>
+                    <a class="nav-link" th:href="@{/nszu-decryption}">Розшифровка -></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/result}">Результат</a>
