--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -11,7 +11,7 @@
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
-<img th:src="@{/img/departments_col_names.jpg}" alt="Excel Spreadsheet Header" class="img-fluid" />
+<!--<img th:src="@{/img/departments_col_names.jpg}" alt="Excel Spreadsheet Header" class="img-fluid" />-->
 
 <div class="container mt-5">
     <h2>Завантаження файлу таблиці відділув</h2>
