--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org" lang="ua">
 <head>
     <meta charset="UTF-8">
-    <title>Admin Panel</title>
+    <title>Med Salary App</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/css/custom.css}" />
 </head>
