--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Сторінка</title>
+    <title>Med Salary App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/stafflist.css}" />
 </head>
@@ -11,7 +11,9 @@
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
-<!--<img th:src="@{/img/departments_col_names.jpg}" alt="Excel Spreadsheet Header" class="img-fluid" />-->
+<div class="container mt-5 d-flex justify-content-center">
+    <img th:src="@{/img/departments_col_names.jpg}" alt="Excel Spreadsheet Header" class="img-fluid w-100" />
+</div>
 
 <div class="container mt-5">
     <h2>Завантаження файлу таблиці відділув</h2>
