--- a/src/main/resources/templates/nszu_decryption.html
+++ b/src/main/resources/templates/nszu_decryption.html
@@ -3,43 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Сторінка</title>
+    <title>Розшифровка Med Salary App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/stafflist.css}" />
 </head>
 <body>
 
-<!-- Навігаційна панель -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Розшифровка</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item">
-                    <a class="nav-link" th:href="@{/nadmin}">Головна</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user}">Користувачі</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/nszu-decryption}">Розшифровка</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/stafflist}">Штатний розпис</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/department}">Відділи</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user-position}">Посади</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/result}">Результат</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
+
+<div class="container mt-5 d-flex justify-content-center">
+    <img th:src="@{/img/nszu_decryption.jpg}" alt="Excel Spreadsheet Header" class="img-fluid w-100" />
+</div>
 
 <div class="container mt-5">
     <h2>Завантаження файлів</h2>
