--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,6 +6,7 @@
     <title>Результуюча таблиця Med Salary App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/stafflist.css}" />
+    <link rel="stylesheet" th:href="@{/css/result.css}" />
 </head>
 <body>
 
@@ -14,27 +15,31 @@
 <div class="container mt-5">
     <p th:text="${result_count}">Кількість згенерованих результатів</p>
     <button type="button" class="btn btn-primary" th:onclick="location = '/result/generate'">
-        Сгенерувати результати
+        Сгенерувати результати з бази
+    </button>
+    <button type="button" class="btn btn-primary" th:onclick="location = '/result/generate-f'">
+        Сгенерувати результати з файлів
     </button>
 </div>
 
-<div class="container mt-5">
-    <table class="table">
+<div class="container mt-5 table-container">
+    <table class="table table-bordered">
         <thead>
         <tr>
             <th>ПІБ</th>
             <th>Відділ</th>
             <th>Посада</th>
+            <th>Ставка</th>
             <th>Максимальна кількість балів</th>
             <th>Сума за бал</th>
-            <th>Премія за стаціонарні взаємодії</th>
-            <th>Премія за амбілаторні взаємодії</th>
-            <th>Хірургія одного дня</th>
             <th>Кількість стаціонарних ЕМЗ</th>
-            <th>Кількість амбулаторних ЕМЗ</th>
-            <th>Кількість пріоритетних ЕМЗ</th>
+            <th>Премія за стаціонарні взаємодії</th>
+            <th>Премія за амбулаторні взаємодії</th>
+            <th>Сума 9-го пакету</th>
+            <th>Хірургія одного дня</th>
             <th>Кількість ЕМЗ хірургії одного дня</th>
-            <th>Сума 9- го пакету</th>
+            <th>Кількість пріоритетних ЕМЗ</th>
+            <th>Кількість амбулаторних ЕМЗ</th>
         </tr>
         </thead>
         <tbody id="staffTable">
@@ -42,18 +47,18 @@
             <td th:text="${result.user.name != null ? result.user.name : 'null'}"></td>
             <td th:text="${result.department.name != null ? result.department.name : 'null'}"></td>
             <td th:text="${result.userPosition.name != null ? result.userPosition.name : 'null'}"></td>
+            <td th:text="${result.employmentPart != null ? result.employmentPart : 0}"></td>
             <td th:text="${result.userPosition.maxPoint != null ? result.userPosition.maxPoint : 0}"></td>
             <td th:text="${result.userPosition.pointValue != null ? result.userPosition.pointValue : 0}"></td>
+            <td th:text="${result.countEMR_stationary != null ? result.countEMR_stationary : 0}"></td>
             <td th:text="${result.hospNSZU_Premium != null ? result.hospNSZU_Premium : 0}"></td>
             <td th:text="${result.amblNSZU_Premium != null ? result.amblNSZU_Premium : 0}"></td>
-            <td th:text="${result.oneDaySurgery != null ? result.oneDaySurgery : 0}"></td>
-            <td th:text="${result.countEMR_stationary != null ? result.countEMR_stationary : 0}"></td>
-            <td th:text="${result.countEMR_ambulatory != null ? result.countEMR_ambulatory : 0}"></td>
-            <td th:text="${result.countEMR_priorityService != null ? result.countEMR_priorityService : 0}"></td>
-            <td th:text="${result.countEMR_oneDaySurgery != null ? result.countEMR_oneDaySurgery : 0}"></td>
             <td th:text="${result.sumForAmlPackage != null ? result.sumForAmlPackage : 0}"></td>
+            <td th:text="${result.oneDaySurgery != null ? result.oneDaySurgery : 0}"></td>
+            <td th:text="${result.countEMR_oneDaySurgery != null ? result.countEMR_oneDaySurgery : 0}"></td>
+            <td th:text="${result.countEMR_priorityService != null ? result.countEMR_priorityService : 0}"></td>
+            <td th:text="${result.countEMR_ambulatory != null ? result.countEMR_ambulatory : 0}"></td>
         </tr>
-
         </tbody>
     </table>
 </div>
