--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,6 +19,9 @@
                     <a class="nav-link" th:href="@{/stafflist}">Штатний розпис -></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/timesheet}">Табель -></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/user}">Користувачі -></a>
                 </li>
                 <li class="nav-item">
