--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,6 +24,7 @@
                         <div class="mb-3">
                             <label for="username" class="form-label">Логін</label>
                             <input type="text" class="form-control" id="username" name="username" required>
+                            <input type="hidden" name="fromIndex" value="true">
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Пароль</label>
